--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crud_operations_react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Ridhim06.github.io",
+  "homepage": "https://Ridhim06.github.io/crud_operations_react",
 
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
